--- a/gb/1/2/18/n48718.md
+++ b/gb/1/2/18/n48718.md
@@ -4,62 +4,61 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>美主要新闻媒介评布什外交政策</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2月18日讯】<ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue><ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue>布什</font></A></font></A>担任总统一个多月来，在外交政策方面已经有不少动作。美国主要新闻媒介都发表了<ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue><ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue>评论</font></A></font></A>。<<纽约时报>>说，目前看来，布什外交政策的首要目标，是保持美国在国际社会中的影响力，但要比克林顿政府更有重点、更有选择地处理国际事务。 </p>
+	<p>【大纪元2月18日讯】<font color="blue"><ahref="https://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702"><font color="blue">布什</font></a></font>担任总统一个多月来，在外交政策方面已经有不少动作。美国主要新闻媒介都发表了<font color="blue"><ahref="https://www3.epochtimes.com/news/epochnews/main/8.md#1"><font color="blue">评论</font></a></font>。&gt;说，目前看来，布什外交政策的首要目标，是保持美国在国际社会中的影响力，但要比克林顿政府更有重点、更有选择地处理国际事务。 </p>
 <p>据VOA报导，布什的一位外交政策方面的助手表示，“美国确实非常强大，但是如果我们到处显示我们的力量和使用我们的资源，结果就会适得其反，或者在哪里都不能取得很好的效果。”这种看法已经反映到布什政府的具体做法上。从目前来看，伊拉克问题和墨西哥移民问题都是布什外交政策的重点。 </p>
 <p>最近美国和英国联合袭击伊拉克的军事设施，尽管布什说这次行动是加强伊拉克禁飞区的“例行任务”，但是它向伊拉克发出了一个信号，那就是美国将尽一切努力来限制萨达姆.侯塞因的军事实力，并保证联合国能够对其武器发展计划进行彻底检查。除了军事行动之外，布什政府还将很快向伊拉克反对派提供两千九百万美元的援助，希望借反对派的力量来打击萨达姆政权。 </p>
 <p>*不会象克林顿政府那样干预其它国家经济政策* </p>
-<p>在墨西哥移民问题上，<<洛杉矶时报>>说，布什担任总统以来出访的第一个国家是墨西哥，这表明了他对墨西哥关系的重视。布什在担任德克萨斯州州长的时候，就因为和墨西哥保持友好关系而赢得不少拉美裔美国选民的支持。不少观察人士认为，在布什政府下将有更多的拉美裔参政，美国和拉美国家的关系也将进一步加强。 </p>
-<p>另一方面，布政府可能会减少对一些国家的援助或干预。例如，美国财政部长奥尼尔最近就公开批评克林顿政府以前向俄罗斯提供贷款是不明智的做法。奥尼尔不仅敦促俄罗斯尽快还债，而且还警告俄罗斯政府，除非俄罗斯消除<ahref=http://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=315><font color=blue><ahref=http://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=315><font color=blue>腐败</font></A></font></A>现象，否则美国不会再向俄罗斯提供援助。奥尼尔还表示，布什政府不会象克林顿政府那样干预其它国家的经济政策。例如，美国不会再对日本说教，要求日本采取某些措施走出十年来的经济衰退。 </p>
-<p>克林顿离任前在联合国发表最后一次讲话时表示，美国将帮助建立一只国际快速反应部队，在任何国家的内战发展成种族屠杀时进行干预。但是<<纽约时报>>说，布什很可能不会支持这样的行动。副总统切尼的一位高级军事顾问表示：“这届政府感到，美国的干预并不能在多大程度上避免类似海地、卢旺达或者科索沃屠杀那样的悲剧。” </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48716 target=_blank class=ltnn>萨达姆下令组建21个志愿军师</a> (2/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48662 target=_blank class=ltnn>中共一胎化政策走火入魔可能引发与美冲突</a> (2/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48659 target=_blank class=ltnn>老布什将与撒契尔夫人一起出席科威特庆典</a> (2/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48655 target=_blank class=ltnn>空袭表明：布什更重视处理伊拉克和伊朗问题</a> (2/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48498 target=_blank class=ltnn>中共资深外交官访美仅见至次卿</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48496 target=_blank class=ltnn>新闻分析：美国的政策改变，北京有理由不安</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48494 target=_blank class=ltnn>台海两岸关系配合美国对华政策而动</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48493 target=_blank class=ltnn>金山论坛：美国对台军售，理直气壮</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48437 target=_blank class=ltnn>伊拉克人发誓：“我们将为萨达姆、巴勒斯坦献身”</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48384 target=_blank class=ltnn>美潜艇撞渔船，掌舵贵宾曾与布什关系匪浅</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48346 target=_blank class=ltnn>墨西哥总统称：美墨高峰会很成功</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48344 target=_blank class=ltnn>布什首次出国访问媒体焦点转向拉丁美洲</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48341 target=_blank class=ltnn>美国支持谴责中国人权决议 一场硬战将在联合国展开</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48335 target=_blank class=ltnn>日首相致信布什表示不要让撞船事件损害两国关系 </a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48297 target=_blank class=ltnn>有其父必有其子：老小布什都不喜欢花椰菜</a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48280 target=_blank class=ltnn>路透社：布什在支持中国人权方面面临重大决定 </a> (2/17/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48273 target=_blank class=ltnn>布什：美墨关系进入新时期 </a> (2/16/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48251 target=_blank class=ltnn>《风向》管窥布什新政府作为</a> (2/16/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=48229 target=_blank class=ltnn>白宫说布什总统亲自批准对伊拉克的攻击行动</a> (2/16/2001)<br />
-	
+<p>在墨西哥移民问题上，&gt;说，布什担任总统以来出访的第一个国家是墨西哥，这表明了他对墨西哥关系的重视。布什在担任德克萨斯州州长的时候，就因为和墨西哥保持友好关系而赢得不少拉美裔美国选民的支持。不少观察人士认为，在布什政府下将有更多的拉美裔参政，美国和拉美国家的关系也将进一步加强。 </p>
+<p>另一方面，布政府可能会减少对一些国家的援助或干预。例如，美国财政部长奥尼尔最近就公开批评克林顿政府以前向俄罗斯提供贷款是不明智的做法。奥尼尔不仅敦促俄罗斯尽快还债，而且还警告俄罗斯政府，除非俄罗斯消除<font color="blue"><ahref="https://www.dajiyuan.com/news/epochnews/news/Focus.asp?Focus_ID=315"><font color="blue">腐败</font></a></font>现象，否则美国不会再向俄罗斯提供援助。奥尼尔还表示，布什政府不会象克林顿政府那样干预其它国家的经济政策。例如，美国不会再对日本说教，要求日本采取某些措施走出十年来的经济衰退。 </p>
+<p>克林顿离任前在联合国发表最后一次讲话时表示，美国将帮助建立一只国际快速反应部队，在任何国家的内战发展成种族屠杀时进行干预。但是&gt;说，布什很可能不会支持这样的行动。副总统切尼的一位高级军事顾问表示：“这届政府感到，美国的干预并不能在多大程度上避免类似海地、卢旺达或者科索沃屠杀那样的悲剧。” </p>
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48716" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">萨达姆下令组建21个志愿军师</a> (2/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48662" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中共一胎化政策走火入魔可能引发与美冲突</a> (2/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48659" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">老布什将与撒契尔夫人一起出席科威特庆典</a> (2/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48655" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">空袭表明：布什更重视处理伊拉克和伊朗问题</a> (2/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48498" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中共资深外交官访美仅见至次卿</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48496" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">新闻分析：美国的政策改变，北京有理由不安</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48494" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台海两岸关系配合美国对华政策而动</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48493" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">金山论坛：美国对台军售，理直气壮</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48437" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">伊拉克人发誓：“我们将为萨达姆、巴勒斯坦献身”</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48384" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美潜艇撞渔船，掌舵贵宾曾与布什关系匪浅</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48346" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">墨西哥总统称：美墨高峰会很成功</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48344" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什首次出国访问媒体焦点转向拉丁美洲</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48341" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国支持谴责中国人权决议 一场硬战将在联合国展开</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48335" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">日首相致信布什表示不要让撞船事件损害两国关系 </a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48297" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">有其父必有其子：老小布什都不喜欢花椰菜</a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48280" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">路透社：布什在支持中国人权方面面临重大决定 </a> (2/17/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48273" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什：美墨关系进入新时期 </a> (2/16/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48251" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">《风向》管窥布什新政府作为</a> (2/16/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=48229" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">白宫说布什总统亲自批准对伊拉克的攻击行动</a> (2/16/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/16/n48229.md#1">白宫说布什总统亲自批准对伊拉克的攻击行动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/16/n48273.md#1">布什：美墨关系进入新时期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/17/n48280.md#1">路透社：布什在支持中国人权方面面临重大决定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/17/n48297.md#1">有其父必有其子：老小布什都不喜欢花椰菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">林辉：沈阳雪堆中千余苏军尸体背后的暴行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761555.md#1">宗泽“宗爷爷”：大宋的铁血老将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393484.md#1">【杨延昭传奇】杨宗保初遇穆桂英（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403028.md#1">【新闻欣视角】中共被爆把八千万官当待割韭菜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403990.md#1">【唐青看时事】川普团队点名蔡奇 习面临挑战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397456.md#1">【直播】新唐人“2025跨年缤纷夜”特别节目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401877.md#1">WTO承诺未兑现 中共突降进口关税 专家解读</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402015.md#1">【军事情报局】中共六代机歼轰36？美国早知情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399535.md#1">失业率高 大学生无奈当网约司机或外卖员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402017.md#1">赵露思病倒风波延烧 剧组“阴阳剧本”透隐情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401984.md#1">基努·李维家中曾遭窃 一年后在智利寻回名表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401508.md#1">2024年全球前十大电影票房排名 九部是续集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402450.md#1">瑞莎岁末报喜 带队赴韩比赛抱回12奖 女儿首摘金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14403007.md#1">陆男星陈哲远跨年演出忘拿麦克风 假唱被抓包</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402533.md#1">杂草掰！这8样除草剂 园艺维护快速有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397981.md#1">喝对咖啡护肝 过量失智 加它稳定血压血糖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401399.md#1">为什么洋芋片的包装中有那么多气体？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403382.md#1">研究：每天散步1小时或可延长寿命6小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403287.md#1">【旅行趣】台湾苗栗铜锣炮仗花海 点燃冬日的奇景</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/18/n48718.htm">美主要新闻媒介评布什外交政策</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/18/n48718.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
